# auto_calibration

./: CMakeLists.txt  Dockerfile  README.md  package.xml
launchs/: extraction_node.launch  image_processor_node.launch  lidar_extrinsic_optimizer_node.launch  merge_lidar_stereo_cloud_node.launch  stereo_pair_feature_matcher_node.launch  stereo_triangulation_node.launch  thermal_extrinsic_optimizer_node.launch
scripts/: run_extraction.sh
src/: ceres_ICP.hpp  direct_BA.hpp  edge_filter.hpp  extraction.cpp  file_io.hpp  image_preprocess.cpp  lidar_extrinsic_optimizer.cpp  merge_lidar_stereo_cloud.cpp  model_io.hpp  pose3d.hpp  stereo_edge_flow.py  stereo_pair_feature_matcher.cpp  stereo_triangulation.cpp  thermal_extrinsic_optimizer.cpp
